Added RabbitMQ & Redis configuration properties

--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,13 @@
 random.property=345
+
+# RabbitMQ Config
+crocus.rabbitmq.host=crocus-rabbitmq
+crocus.rabbitmq.fanoutexchange=fanout.exchange
+crocus.rabbitmq.queue.all-conferences=allConferences
+crocus.rabbitmq.queue.self-conference=selfConferences
+crocus.rabbitmq.queue.conference=conference
+crocus.rabbitmq.queue.chat=chatConference
+
+# Redis Config
+spring.redis.sentinel.master=mymaster
+spring.redis.sentinel.nodes=sentinel_1:26379,sentinel_2:26379,sentinel_3:26379
