--- a/application.properties
+++ b/application.properties
@@ -11,3 +11,11 @@ crocus.rabbitmq.queue.chat=chatConference
 # Redis Config
 spring.redis.sentinel.master=mymaster
 spring.redis.sentinel.nodes=sentinel_1:26379,sentinel_2:26379,sentinel_3:26379
+
+# Hystrix
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=20000
+
+# Ribbon
+ribbon.ReadTimeout=10000
+ribbon.ConnectTimeout=10000
+
