test of conf update

--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,8 @@
 random.property=345
 
 # RabbitMQ Config
-crocus.rabbitmq.host=crocus-rabbitmq
-crocus.rabbitmq.fanoutexchange=fanout.exchange
+crocus.rabbitmq.host=crocus-rabbitmq@@test
+crocus.rabbitmq.fanoutexchange=fanout.exchange@@test
 crocus.rabbitmq.queue.all-conferences=allConferences
 crocus.rabbitmq.queue.self-conference=selfConferences
 crocus.rabbitmq.queue.conference=conference
