--- a/application.properties
+++ b/application.properties
@@ -2,7 +2,7 @@ random.property=345
 
 # RabbitMQ Config
 crocus.rabbitmq.host=crocus-rabbitmq
-crocus.rabbitmq.fanoutexchange=fanout.exchange
+crocus.rabbitmq.fanoutexchange=fanout.exchange@tetetet
 crocus.rabbitmq.queue.all-conferences=allConferences
 crocus.rabbitmq.queue.self-conference=selfConferences
 crocus.rabbitmq.queue.conference=conference
