test of conf update

--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,8 @@
 random.property=345
 
 # RabbitMQ Config
-crocus.rabbitmq.host=crocus-rabbitmq
-crocus.rabbitmq.fanoutexchange=fanout.exchange@tetetet
+crocus.rabbitmq.host=crocus-rabbitm-newvalue
+crocus.rabbitmq.fanoutexchange=fanout.exchange-newvalue
 crocus.rabbitmq.queue.all-conferences=allConferences
 crocus.rabbitmq.queue.self-conference=selfConferences
 crocus.rabbitmq.queue.conference=conference
