--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 random.property=345
 
 # RabbitMQ Config
-crocus.rabbitmq.host=crocus-rabbitm
+crocus.rabbitmq.host=crocus-rabbitmq
 crocus.rabbitmq.fanoutexchange=fanout.exchange-newvalue
 crocus.rabbitmq.queue.all-conferences=allConferences
 crocus.rabbitmq.queue.self-conference=selfConferences
