--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
 random.property=345
 
 # RabbitMQ Config
-spring.rabbitmq.host=crocus-rabbitmq
+spring.rabbitmq.host=crocus-rabbitmq1
 crocus.rabbitmq.host=crocus-rabbitmq2
 crocus.rabbitmq.fanoutexchange=fanout.exchange
 crocus.rabbitmq.queue.all-conferences=allConferences
