test of conf update

--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,7 @@
 random.property=345
 
 # RabbitMQ Config
-spring.rabbitmq.host=crocus-rabbitmq1
-crocus.rabbitmq.host=crocus-rabbitmq2
+crocus.rabbitmq.host=crocus-rabbitmq
 crocus.rabbitmq.fanoutexchange=fanout.exchange
 crocus.rabbitmq.queue.all-conferences=allConferences
 crocus.rabbitmq.queue.self-conference=selfConferences
