test of conf update

--- a/application.properties
+++ b/application.properties
@@ -2,6 +2,7 @@ random.property=345
 
 # RabbitMQ Config
 crocus.rabbitmq.host=crocus-rabbitmq
+crocus.rabbitmq.addresses=crocus-rabbitmq:5762,crocus-rabbitmq-slave1:5762,crocus-rabbitmq-slave2:5762
 crocus.rabbitmq.fanoutexchange=fanout.exchange
 crocus.rabbitmq.queue.all-conferences=allConferences
 crocus.rabbitmq.queue.self-conference=selfConferences
