Added rabbitmq properties

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,10 @@
 random.property=345
 
 # RabbitMQ Config
+
+spring.rabbitmq.host=crocus-rabbitmq
+spring.rabbitmq.port=5672
+
 crocus.rabbitmq.host=crocus-rabbitmq
 crocus.rabbitmq.addresses=crocus-rabbitmq:5762,crocus-rabbitmq-slave1:5762,crocus-rabbitmq-slave2:5762
 crocus.rabbitmq.fanoutexchange=fanout.exchange
