--- a/application.properties
+++ b/application.properties
@@ -2,8 +2,10 @@ random.property=345
 
 # RabbitMQ Config
 
-spring.rabbitmq.host=crocus-rabbitmq
-spring.rabbitmq.port=5672
+#spring.rabbitmq.host=crocus-rabbitmq
+#spring.rabbitmq.port=5672
+
+spring.rabbitmq.adresses=crocus-rabbitmq:5762,crocus-rabbitmq-slave1:5762,crocus-rabbitmq-slave2:5762
 
 crocus.rabbitmq.host=crocus-rabbitmq
 crocus.rabbitmq.addresses=crocus-rabbitmq:5762,crocus-rabbitmq-slave1:5762,crocus-rabbitmq-slave2:5762
