Added rabbitmq properties

--- a/application.properties
+++ b/application.properties
@@ -9,7 +9,7 @@ spring.rabbitmq.addresses=crocus-rabbitmq:5672,crocus-rabbitmq-slave1:5672,crocu
 
 crocus.rabbitmq.host=crocus-rabbitmq
 crocus.rabbitmq.addresses=crocus-rabbitmq:5672,crocus-rabbitmq-slave1:5672,crocus-rabbitmq-slave2:5672
-crocus.rabbitmq.fanoutexchange=fanout.exchange2
+crocus.rabbitmq.fanoutexchange=fanout.exchange
 crocus.rabbitmq.queue.all-conferences=allConferences
 crocus.rabbitmq.queue.self-conference=selfConferences
 crocus.rabbitmq.queue.conference=conference
