Added rabbitmq properties

--- a/application.properties
+++ b/application.properties
@@ -5,11 +5,11 @@ random.property=345
 #spring.rabbitmq.host=crocus-rabbitmq
 #spring.rabbitmq.port=5672
 
-spring.rabbitmq.addresses=crocus-rabbitmq:5672,crocus-rabbitmq-slave1:5672,crocus-rabbitmq-slave2:56721
+spring.rabbitmq.addresses=crocus-rabbitmq:5672,crocus-rabbitmq-slave1:5672,crocus-rabbitmq-slave2:5672
 
 crocus.rabbitmq.host=crocus-rabbitmq
 crocus.rabbitmq.addresses=crocus-rabbitmq:5672,crocus-rabbitmq-slave1:5672,crocus-rabbitmq-slave2:5672
-crocus.rabbitmq.fanoutexchange=fanout.exchange1
+crocus.rabbitmq.fanoutexchange=fanout.exchange
 crocus.rabbitmq.queue.all-conferences=allConferences
 crocus.rabbitmq.queue.self-conference=selfConferences
 crocus.rabbitmq.queue.conference=conference
