--- a/application.properties
+++ b/application.properties
@@ -5,10 +5,9 @@ random.property=345
 #spring.rabbitmq.host=crocus-rabbitmq
 #spring.rabbitmq.port=5672
 
-spring.rabbitmq.addresses=crocus-rabbitmq:5672,crocus-rabbitmq-slave1:5672,crocus-rabbitmq-slave2:5672
+spring.rabbitmq.addresses=1crocus-rabbitmq:5672,1crocus-rabbitmq-slave1:5672,1crocus-rabbitmq-slave2:5672
 
 crocus.rabbitmq.host=crocus-rabbitmq
-crocus.rabbitmq.addresses=crocus-rabbitmq:5672,crocus-rabbitmq-slave1:5672,crocus-rabbitmq-slave2:5672
 crocus.rabbitmq.fanoutexchange=fanout.exchange
 crocus.rabbitmq.queue.all-conferences=allConferences
 crocus.rabbitmq.queue.self-conference=selfConferences
